完善APP架构学习

--- a/读书笔记/iOS高级笔记/知识小集01.md
+++ b/读书笔记/iOS高级笔记/知识小集01.md
@@ -7,20 +7,139 @@ description: 总结项目开发中的常用的进阶知识点
 ---
 
 
+### 设计模式
+设计模式简单地说就是程序开发的套路和模板。主要是 为了代码的可重用性，将某些功能的模块代码规范化，然后尽可能让他人容易理解。
+
+任何一种设计模式都是一种设计原则。设计模式就是实现了设计原则，达到了代码复用和可维护性。设计模式又包含创建型模式、结构型模式、行为型模式。
+#### 设计原则
+* **单一职责原则**：一个类只承担一个职责。比如UIView和CALayer的职责分离；
+* **开闭原则**：对修改关闭、对扩展开发，如果要修改也尽量用继承或组合的方式来修改。比如category给元类添加方法；
+* **里氏替换原则**：是指父类可以被子类无缝替换，且原有功能不受影响； 比如说KVO原理，动态实现了一个NSNotifing的子类，而我们感受不到任何变化；
+* **接口隔离原则**：使用多个专门的协议而不是一个庞大臃肿的协议，协议中方法也应该尽量少。 比如UITableView将代理分成了delegate和datasource；
+* **依赖倒置原则**：抽象不应该依赖于具体实现，具体实现可以依赖于抽象。比如我们写数据库操作的时候，先用协议实现增删改查的接口，至于具体的实现：使用什么数据库、存储在什么位置等细节，上层业务则无需感知了；
+* **迪米特法则**：一个对象应当对其他对象尽可能少的了解，尽可能实现高内聚、低耦合；比如项目中路由的使用，MVVM中viewmodel的使用；
+#### 常用设计模式
+##### 创建型模式
+* 工厂方法模式：工厂模式就是给定一个工厂方法，然后通过传入的参数来确定生成具体的哪个实例。代码：
+```
+//一个抽象产品类：Phone,声明了一个call方法
+protocol Phone {
+    func call;
+}
+//两个具体的产品类：iPhone和HUAWEI
+class IPhone : Phone {
+    func call() {print("iphone call")}
+}
+class HUAWEI : Phone {
+    func call() {print("huawei call")}
+}
+
+//工厂方法
+class PhoneFactory {
+    func createPhonre(_ name:String)-> Phone? {
+        if name.contains("iPhonre") {
+            return IPhone()
+        }else if name.contains("HUAWEI") {
+            return HUWEI()
+        }
+        return nil
+    }
+}
+
+//使用
+let p = PhoneFactory.createPhonre("iPhonre")
+p.call()
+
+```
+优点：工厂类方法更好区分一个类簇的各色特点；缺点是一旦有新的产品添加的话，就得修改工厂方法，违反了开闭原则。
+* 单例模式：保证当前类全局只有一个公共的实例；一般与懒加载一起出现，只有被需要时才会被创建
+```
+class Manager {
+    static let share = Manager() //static 底层实现了dispatch_once和懒加载功能
+    private init(){}
+}
+```
+* 创建者模式：将复杂对象的构建与它的表示(属性、方法)分离；略
+* 原型模式：简单来说就是通过深拷贝的方式创建对象；比如说A创建了一份简历，B则把A的简历拷贝了一份，然后修改了对应的姓名等部分信息。这就是原型模式的实现。
+优点：对一些创建过程繁琐的对象来说，原型模式可以提高生成效率；
+缺点：如果对象层级太多的话，手写clone方法也会比较复杂。
+iOS 应用：OC中使用NSCopying协议，配合 (id)copyWithZone:(NSZone * )zone方法；或者使用NSMutableCopying协议配合mutableCopyWithZone方法实现。
+
+##### 结构型模式
+(这里只讲几种自己熟悉的模式)
+* 适配器模式：如果无法修改一个类已有的实现，则可以生成一个新类，持有该类主要是对于一些接口，如果当前类用不上，则可以通过二次封装，让其只包含当前类可用的接口，这就是适配器模式。主要做法就是将一个类的接口转换为另一个类的接口；
+* 组合模式：又叫部分整体模式，用于把一组相似的对象当作一个单一的对象。组合模式依据树形结构来组合对象，用来表示部分及整体层次。使得使用的时候，模糊了简单元素与复杂元素的概念。外界只对整体模块进行使用，而不需要了解组合里面的小模块的具体细节。
+* 装饰模式：指在不修改原封装的基础上的前提下，为对象动态添加新功能的模式。在OC中，它的表现形式就是Category和Delegation，在Swift中，它的表现形式就是Extension和Delegation。(swift中的Extension与OC的Category的区别就是Extension更强大，它可以为Protocol扩展完成默认实现)；
+* 外观模式：外观模式就是定义一个高层接口，为子系统中的一组接口提供一个统一的接口。也就是说，使用时直接访问高层接口，而无需访问子模块中的接口。比如**SDWebImage**，它定义了下载和缓存两个独立的子模块。但是外界调用只需要调用最上层的sd_setimageWithUrl，而无需一步步调用下载和缓存的子接口。这就是外观模式，正常来说，我们封装的大多数类，都应该尽可能设计成外观模式的设计模式。
+* 桥接模式：
+* 享元模式：
+* 代理模式：
+##### 行为型模式
+(这里只讲几种自己熟悉的模式)
+* **责任链模式**：责任链模式就是由一堆类似功能的类组成的一条链，如果当前类无法处理该事件，就传给下一个响应者。**最经典的就是iOS的响应链模式，就是使用了责任链模式**。另外举一个例子：银行ATM取钱，如果存在100、50、20三种币值，那么ATM的最基本的特性就是尽可能出尽量少的张数，也就是说大的币值尽可能出最多，所以可以给每种币值作为一个类，然后从大往小链接起来。每次将自身无法处理的币值传给后者。比如要取290元，取了2张100的之后，就将90传递给50的币种，去除一张50的之后，就将剩余的40传递给20的币值... 这样单独处理而不是全部放一起去处理的好处就是，如果有一种新的币值，那么可随时插入进责任链中，其次也可以根据需求来修改链中的顺序，比如尽可能出最小币值。缺点就是可能会导致处理被延时；
+* 中介者模式：使用一个中介者对象来封装一系列交互，使得相互通信的两个类无需相互引用，尽可能不偶合在一起。中介者模式的应用，就是**组件化的CTMediator**；
+* 备忘录模式：在不破坏封装性的前提下，捕获一个对象的内部状态，并在该对象之外保存这个状态。这样以后就可以对该对象恢复到保存之前的状态；最经典的使用例子就是UserDefault；
+* 观察者模式：观察者模式定义对象直接的一种一对多依赖关系，每当一个对象状态发生改变时，其相关依赖对象皆得到通知并被自动更新。典型的例子：KVO、通知。
+* 命令模式：
+* 解析器模式：
+* 迭代器模式：
+* 状态模式：
+* 策略模式：
+* 模板方法模式：
+* 访问者模式：
+
+https://www.jianshu.com/p/e5c69c7b8c00
 
 
 ### APP常用架构
+#### 架构的选择
+好的架构需要关注3点需求：
+* 代码均摊：合理的APP架构应该合理分配代码，每个类、结构体、方法、变量的存在都应该遵循单一职责的原则；
+* 便于测试：测试确保了代码质量，我们熟知的单元测试、性能测试、UI测试都是针对单个方法或界面的。APP架构的合理分配决定了各个测试能够各司其职，不重复、不遗漏，让测试效率和覆盖率达到最大；
+* 易用性：好的APP架构确保了日后开发中可以应对各种需求，易扩展、易重用；
 #### MVC
-
-Model —— View —— Controller，Controller负责协调model和View；
-
+Model —— View —— Controller。Model负责处理数据；view负责处理UI；Controller负责协调model和View，是它们之间的桥梁，它将数据从Model层传送到View层，并展示出来，同时将View层的交互传到Model层以改变数据；
+* 优点：
+	* 代码总量少、简单易懂；
+* 缺点：
+	* 代码过于集中，View和Model高度耦合；
+	* 难以测试：太耦合，单元测试没法配合特定视图进行；
+	* 难于扩展：太耦合，使得增加新功能不仅可能需要修改大量原有代码，也是的Controller愈发笨重；
+	* model层过于简单；
+	* 网络请求逻辑无从安放；
 #### MVVM
-简单介绍一下MVVM框架及ViewModel作用
-说到MVVM之前，首先要先介绍一下MVC框架，MVC框架就是Model-View-Controller组成，其中Model负责呈现数据，View负责UI展示，Controller则负责调解Model和View直接的交互。这样就导致了大部分的处理逻辑都在Controller当中，所以它又被称为“重量级视图控制器”。而MVVM框架则表示Model--ViewModel--（View Controller），它其实就是对MVC的一个优化而已，它将业务逻辑、网络请求和数据解析放在了ViewModel层，大大简化了Controller层的逻辑代码，也让model 、view的功能更加独立单一。
+MVVM也是在MVC的基础上添加了ViewModel层级，MVVM框架则表示Model--ViewModel--（View Controller）。它将业务逻辑、网络请求和数据解析放在了ViewModel层，大大简化了Controller层的逻辑代码，也让model 、view的功能更加独立单一。
+ViewModel主要作用：
+* 视图层的真正数据提供者：一般视图层展示的数据经常是一个或多个model的属性组合。ViewModel就可以将这些数据整合，使得视图直接调用单个数据就能展示所要的效果。简单来说，就是可以对模型层的数据进行包装；
+* 视图层的交互响应者：所有的交互都会传递给ViewModel，ViewModel会依次更新视图层需要的属性，同时相应修改model层的数据。不过这里最好依赖响应式架构或属性观察器；
 
 #### MVP
+MVP是在MVC的基础上，将Controller职责分离开，用它处理View的交互事件、数据绑定等。MVP与MVC的相同点是Model层都是一样的，但是MVP的V是表示UIView和UIController。View层持有Presenter作为变量，当接收到用户交互时，它会调用Presenter进行处理，也就是说View层不包含任何业务逻辑，它只会将交互交给Presenter，并从Presenter接受结果来更新自己。
+Presenter被用来沟通View和Model之间的联系，Model不能直接作用于View的更新，只能通过Presenter来通知View进行视图刷新，所以View就只专注于视图相关内容，被动接收Presenter的命令。这样的话，View就只显示，不处理逻辑，Presenter持有Model，Model只用于处理数据相关内容；
+但是Presenter需要注意循环引用的问题。
+* 缺点：
+	* 所有的交互都传给Presenter处理，从而一旦项目功能增加了，View的代码和Presenter的代码都增加了。维护成本就特别高昂；
 
-MVP是在MVC的基础上，将Controller职责分离开，只用它处理View的交互事件、数据绑定等。Presenter被用来沟通View和Model之间的联系，Model不能直接作用于View的更新，只能通过Presenter来通知View进行视图刷新，所以View就只专注于视图相关内容，被动接收Presenter的命令。这样的话，View就只显示，不处理逻辑，Presenter持有Model，Model只用于处理数据相关内容；
+#### MVC & MVVM & MVP
+* 三种架构的Model层基本相同；
+* 视图层理论上都被设计成被动，但是实际略有不同：
+	* 理论上MVC希望视图只负责UI更新和交互，不涉及业务逻辑和模型更新；但是实际开发中，MVP和MVVM的视图层反而实现了这个期望，即与中间层严格分离。
+	* MVP的视图层是完全被动的，只单纯地把交互和更新传递给中间层；
+	* MVVM的视图层并不是完全被动，它会监视中间层的变化，一旦发生变化，视图层也会相应发生变化；
+* 中间层的设计是三种架构的核心差异：
+	* MVC中的Controller持有视图和模型层，起到组装和桥接作用；
+	* MVP的Presenter持有模型，在model的更新上和Controller角色一样，然后MVP的视图层持有Presenter。中间层的工作流程就是：从视图接收交互传递——响应——向视图层传递响应指令——视图更新；
+	* MVVM：ViewModel持有模型，在更新模型上与前两者一致。它完全独立于视图，视图拥有中间层，通过绑定属性自动进行更新。
+	
+#### VIPER
+VIPER由5个部分组成：View、Interactor、Presenter、Entity、Router。
+* View：视图层，与MVP等的VIew一致，只接收用户交互信息但不处理，而是传递给展示层；
+* Presenter：展示层，与MVP的P或MVVM的VM功能类似。这里的Presenter只响应并处理视图层传来的交互请求，并不直接对数据源进行修改。若要修改数据，需要向数据管理层Interactor发送请求；
+* Router：路由，专门负责页面跳转和组件切换；
+* Interactor：专门负责数据源信息，包括网络请求、数据传输、缓存、存储、生成实例等；
+* Entity：模型层，与MVP等的Model大同小异；
+
+VIPER在代码分配、测试覆盖率上为所有架构之冠。缺点就是由于分工精细，不同层级之间交互的代码太多，总体代码量很大。
 
 #### 模块化、组件化：路由化
 ##### 模块化
@@ -394,6 +513,7 @@ https://www.jianshu.com/p/b3c209f6a709
 
 <https://www.jianshu.com/p/479986e9ae80>
 
+### 进程间通信
 
 
 
@@ -402,51 +522,3 @@ https://www.jianshu.com/p/b3c209f6a709
 * 苹果如何保证iOS系统只安装苹果的软件？
 
 #### APP如何与后台进行通信
-
-
-
-### 算法
-#### 排序相关：
-#### 二叉树相关：
-#### 链表相关：
-
-##### 二叉树:
-前序、中序、后序遍历指的是根节点的位置。
-中序：
-
-```OC
-//中序，使用栈
--(void)sourt1:(Node *)root{
-   Node* p = root;
-   stack<Node *> s;
-   while(!s.empty() || p){
-       if(p){ //先将左子树全部入栈
-           s.push(p);
-           p = p.leftchild;
-       }else{
-           p = s.top();
-           s.pop();
-           print(p.value);//打印
-           p = p.rightChild; //进入右子数
-       }
-   }
-}
-//前序：也是使用栈
--(void)sourt2:(Node *)root{
-   Node* p = root;
-   stack<Node *> s;
-   while(!s.empty() || p){
-       if(p){ //先将左子树全部入栈
-	       print(p.value);//打印
-           s.push(p);
-           p = p.leftchild;
-       }else{
-           p = s.top;
-           s.pop();
-           p = p.rightChild; //进入右子数
-       }
-   }
-}
-//后序：也是使用栈。这个好难，先放弃吧
-
-```
