完善多线程

--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -581,9 +581,12 @@ NSLog(@"number = %@", number); //这里是可以打印出来的
 ### 锁与多线程
 #### 进程与线程
 
+* 进程：
+  指系统中正在运行的一个应用程序，是系统进行资源分配和调度的基本单位。每个进程都有自己独立的虚拟地址空间，每个进程只能访问自己的地址空间。这样就将进程之间的内存访问隔离开来了。真正的内存使用过程中，每切换一个进程后，虚拟地址空间都得完全映射到物理地址中，如果内存不足，则会先将正在使用内存的其他程序移出以空出内存供当前程序使用。这也是为什么APP容易被后台强杀的原因。
+* 线程
+  是指进程中一个单一顺序的控制流，一个进程可以并发多个线程，每条线程并行执行不同任务，**各个线程之间共享进程的内存空间**，所以线程太多也不一定是好事，因为内存空间是固定的，
 
-
-
+https://juejin.im/post/6844903801321685000
 多线程是为了实现并发执行的技术。在单核CPU中，操作系统通过分配CPU计算时间来实现软件层面的多线程，在多核CPU中，则直接可以在硬件层面进行多线程运行。
 iOS有多种多线程的方案，pthread、NSThread、performSelect、GCD、NSOperation。
 
@@ -1052,6 +1055,7 @@ operaB.addDependency(operaA)
 
 ##### 传递链寻找最佳响应者
 **寻找最佳响应者就是遍历传递链的过程：传递链就是由系统向最佳响应者传递的过程**
+
 * 1、事件出队后，UIApplication首先将其传递给UIWindow，如果存在多个Window，则优先传给后显示的window；
 * 2、若该window不能响应事件，则将事件传递给其他window。若该window能响应事件，则从后往前询问窗口子视图；
 * 3、子视图中，若能响应，则自下而上传递，若其子视图不响应，则自身是最合适的响应者。若不能响应，则传递给其同级的前一个兄弟视图；
@@ -1369,10 +1373,14 @@ TLS协议就是HTTP协议中的‘S’。TLS协议可以对传输内容进行加
 而负责动画操作的则是CALayer，CALayer的作用主要是为了内容展示和动画操作。
 #### 逐帧 和 关键帧
 iOS的动画主要分为两大类：逐帧动画 和 关键帧动画：
-##### 逐帧动画：就是对过程中的每一帧画面进行绘制
+##### 逐帧动画：
+**就是对过程中的每一帧画面进行绘制**
+
 实现方式就是周期性地调用绘制方法，绘制每帧的动画对象。这里的周期性使用的是CADisplayerLink，即屏幕每次刷新都进行调用。
-##### 关键帧动画：理论上就是提供关键节点，比如起始点、中间点、终点等关键位置，其他的过度位置就交由计算机自动生成。
+##### 关键帧动画：
+理论上就是提供关键节点，比如起始点、中间点、终点等关键位置，其他的过度位置就交由计算机自动生成。
 一般我们提供起始帧、结束帧、动画时间、匀速运动；起始帧和结束帧是我们设定的，其他的过渡帧是系统生成的。CALayer的同一个属性值，会分别保存在模型层和展示层。当我修改一个属性值时，修改的是模型层的数值，动画时系统根据模型层的变化生成过渡值，将其保存在展现层中。执行的过程：
+
 * 1、动画前，显示模型层的当前值；
 * 2、动画开始，切换显示展示层的值；
 * 3、动画过程中，展示层的值会随着时间变化，我们看到的实际是展示层的值在变化；
@@ -1442,7 +1450,8 @@ $clang -ccc-print-phases main.m
 ```
 
 
-##### 1、**预编译**：主要是处理源代码中以“#”开头的预编译指令：
+##### 1、预编译：
+**主要是处理源代码中以“#”开头的预编译指令**:
 ```
 clang -E xx.m -o xx.i
 ```
@@ -1451,7 +1460,8 @@ clang -E xx.m -o xx.i
 * "#include、#import"包含的文件递归插入此处；
 * 删除所有注释；
 * 添加行号和文件名标识；
-##### 2、**编译**：就是把预编译得到的.i文件进行：词法分析、语法分析、静态分析、优化生成相应的汇编代码
+##### 2、编译：
+**就是把预编译得到的.i文件进行：词法分析、语法分析、静态分析、优化生成相应的汇编代码**
 ```
 clang -S xx.i -o xx.s
 ```
@@ -1460,11 +1470,14 @@ clang -S xx.i -o xx.s
 * 静态分析：主要类型声明与匹配的问题。比如整形与字符串相加肯定会报错；
 * 中间语言生成：这里是指根据AST自顶向下生成LLVM的IR语言（它是区别与源码和机器码的一种中间代码）
 * 目标代码生成：根据IR生成依赖具体机器的汇编语言。
-##### 3、**汇编**：把上面得到的.s文件里的汇编指令翻译成机器指令
+##### 3、汇编：
+**把上面得到的.s文件里的汇编指令翻译成机器指令**
 ```
 clang -C xx.s -o xx.o
 ```
-##### 4、**链接**：把目标文件（一个或多个）和需要的库（静态库、动态库）链接成可执行文件Mach-O
+##### 4、链接：
+**把目标文件（一个或多个）和需要的库（静态库、动态库）链接成可执行文件Mach-O**
+
 ```
 clang xx.o -o xx
 ```
