整理部分多线程笔记

--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -583,8 +583,33 @@ NSLog(@"number = %@", number); //这里是可以打印出来的
 
 * 进程：
   指系统中正在运行的一个应用程序，是系统进行资源分配和调度的基本单位。每个进程都有自己独立的虚拟地址空间，每个进程只能访问自己的地址空间。这样就将进程之间的内存访问隔离开来了。真正的内存使用过程中，每切换一个进程后，虚拟地址空间都得完全映射到物理地址中，如果内存不足，则会先将正在使用内存的其他程序移出以空出内存供当前程序使用。这也是为什么APP容易被后台强杀的原因。
+
 * 线程
-  是指进程中一个单一顺序的控制流，一个进程可以并发多个线程，每条线程并行执行不同任务，**各个线程之间共享进程的内存空间**，所以线程太多也不一定是好事，因为内存空间是固定的，
+  是指进程中一个单一顺序的控制流，一个进程可以并发多个线程，每条线程并行执行不同任务，**各个线程之间共享进程的内存空间**，所以线程太多也不一定是好事，因为首先同一个进程中的所有线程都共享进程的内存空间，多开辟子线程也就意味着消耗更多的内存；其次线程之间的上下文切换也会开销很大。
+
+  线程可以访问进程内存中的所有数据。但是线程拥有自己的私有存储空间
+
+  - 栈：(比如局部变量)
+  - 线程局部存储TLS：(是指操作系统为线程单独提供的私有空间，比如iOS的ARC中Autorelease对象作为返回值时有使用TLS作为临时缓存)
+  - 寄存器：(比如函数参数)
+
+- 线程调度
+  当线程数小于等于处理器数量时，是真正的并发，不同的线程运行在不同的处理器上，彼此不相干。但是当线程数量大于处理器数量时，则至少有一个处理器会运行多个线程。
+  在单个处理器处理多个线程时，操作系统会让这些线程轮流执行。这些线程的执行过程则是根据线程的状态进行调度。
+
+  - 运行
+
+  - 就绪
+
+  - 等待（阻塞）
+
+    处于运行中的线程有一个时间片的运行时间。刚创建的线程，不会立即执行，会先进入就绪队列；当线程被分配到CPU时间后，线程进入到运行状态；在运行期间，如果碰到非常耗时的操作，则线程会被挂起进入阻塞状态，以让CPU可以执行其他任务。
+
+* 线程优先级
+虽然所有的任务按照上述的方法轮流执行，但是有一些非常紧急的任务可能会需要先执行。所以这就需要让优先级高的任务优先执行，或者说让优先级高的任务优先进入就绪状态。但是由于某个优先级低的任务可能就存在饿死（一直得不到执行）的情况，所以优先级得动态调整。
+	* 用户指定优先级；
+	* 根据进入等待状态的频繁程度提升或降低优先级；
+	* 长时间得不到执行而被提升优先级；
 
 https://juejin.im/post/6844903801321685000
 多线程是为了实现并发执行的技术。在单核CPU中，操作系统通过分配CPU计算时间来实现软件层面的多线程，在多核CPU中，则直接可以在硬件层面进行多线程运行。
@@ -1120,7 +1145,9 @@ Q：HTTP1.x和HTTP2的主要区别？
 * HTTP2有多路复用，即共享连接，相当于每个连接上可能会有多个request；
 * HTTP2的head会进行压缩缓存。HTTP1则每次都会重复发送；
 
-**Get和Post的区别**：Get请求的参数通过？拼接在URL后面，post则放在Body里面。然后Get是安全的、幂等的、可缓存的，Post是非安全的、非幂等的、非可缓存的。安全性是指是否会引起server端的变化，幂等是指一种请求方法执行多次的结果是否完全相同，可缓存的是指代理服务器是否会进行缓存。
+#### Get和Post的区别：
+
+Get请求的参数通过？拼接在URL后面，post则放在Body里面。然后Get是安全的、幂等的、可缓存的，Post是非安全的、非幂等的、非可缓存的。安全性是指是否会引起server端的变化，幂等是指一种请求方法执行多次的结果是否完全相同，可缓存的是指代理服务器是否会进行缓存。
 
 #### TCP/UDP
 
