--- a/读书笔记/iOS自学笔记/知识小集00-OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00-OC基础.md
@@ -580,12 +580,13 @@ NSLog(@"number = %@", number); //这里是可以打印出来的
 
 ### 锁与多线程
 #### 进程与线程
+https://juejin.im/post/6844903801321685000
 
-* 进程：
-  指系统中正在运行的一个应用程序，是系统进行资源分配和调度的基本单位。每个进程都有自己独立的虚拟地址空间，每个进程只能访问自己的地址空间。这样就将进程之间的内存访问隔离开来了。真正的内存使用过程中，每切换一个进程后，虚拟地址空间都得完全映射到物理地址中，如果内存不足，则会先将正在使用内存的其他程序移出以空出内存供当前程序使用。这也是为什么APP容易被后台强杀的原因。
+* 进程：(线程+内存+文件/网络句柄)
+  指系统中正在运行的一个应用程序，是系统进行资源分配和调度的基本单位。每个进程都有自己独立的虚拟地址空间，每个进程只能访问自己的实际物理地址空间。这样就将进程之间的物理地址访问隔离开来了。真正的内存使用过程中，每切换一个进程后，虚拟地址空间都得完全映射到物理地址中，如果内存不足，则会先将正在使用内存的其他程序移出以空出内存供当前程序使用。这也是为什么APP容易被后台强杀的原因。
 
 * 线程
-  是指进程中一个单一顺序的控制流，一个进程可以并发多个线程，每条线程并行执行不同任务，**各个线程之间共享进程的内存空间**，所以线程太多也不一定是好事，因为首先同一个进程中的所有线程都共享进程的内存空间，多开辟子线程也就意味着消耗更多的内存；其次线程之间的上下文切换也会开销很大。
+  是指进程中一个单一顺序的控制流，是程序执行的最小单位。一个进程可以并发多个线程，每条线程并行执行不同任务，**各个线程之间共享进程的内存空间**，所以线程太多也不一定是好事，因为首先同一个进程中的所有线程都共享进程的内存空间，多开辟子线程也就意味着消耗更多的内存；其次线程之间的上下文切换也会开销很大。
 
   线程可以访问进程内存中的所有数据。但是线程拥有自己的私有存储空间
 
@@ -1555,3 +1556,21 @@ https://juejin.im/post/5abca877f265da238155b6bc
 #### WebCore
 
 <https://blog.csdn.net/HorkyChen/article/details/8888428>
+
+
+//接下来要学习
+[被问千百遍的 TCP 三次握手和四次挥手面试题](https://www.cnblogs.com/xiaolincoding/p/12638546.html)
+[一篇让你明白进程与线程之间的区别与联系](https://juejin.im/post/6844903801321685000)
+[iOS高性能缓存框架](https://www.jianshu.com/p/4d0705595278)
+[app启动性能优化](https://mp.weixin.qq.com/s/Kf3EbDIUuf0aWVT-UCEmbA)
+[iOS项目编译时间](https://juejin.im/post/6844903940778115086)
+[6月最新面经](https://zhuanlan.zhihu.com/p/198939499)
+[6月面经2](https://www.jianshu.com/p/9fe59064220c)
+[8月面经](https://www.jianshu.com/p/9447936dfb46)
+[面经3](https://www.jianshu.com/p/939765be93a7)
+[大厂面经](https://www.jianshu.com/p/bbd11d8b66f9)
+[iOS 网络](https://www.jianshu.com/p/7aa730830238)
+[看图学https](https://juejin.im/post/6844903608421449742)
+[无侵入埋点组件](https://juejin.im/post/6867421879729127431)
+[YBImageBrowser重构心得](https://cloud.tencent.com/developer/article/1466390)
+
