新一轮学习计划00

--- a/读书笔记/iOS自学笔记/知识小集00-OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00-OC基础.md
@@ -1557,7 +1557,6 @@ https://juejin.im/post/5abca877f265da238155b6bc
 
 <https://blog.csdn.net/HorkyChen/article/details/8888428>
 
-
 //接下来要学习
 [被问千百遍的 TCP 三次握手和四次挥手面试题](https://www.cnblogs.com/xiaolincoding/p/12638546.html)
 [一篇让你明白进程与线程之间的区别与联系](https://juejin.im/post/6844903801321685000)
@@ -1569,8 +1568,27 @@ https://juejin.im/post/5abca877f265da238155b6bc
 [8月面经](https://www.jianshu.com/p/9447936dfb46)
 [面经3](https://www.jianshu.com/p/939765be93a7)
 [大厂面经](https://www.jianshu.com/p/bbd11d8b66f9)
+
+[面经3](https://zhuanlan.zhihu.com/p/113816262)
+
 [iOS 网络](https://www.jianshu.com/p/7aa730830238)
 [看图学https](https://juejin.im/post/6844903608421449742)
 [无侵入埋点组件](https://juejin.im/post/6867421879729127431)
 [YBImageBrowser重构心得](https://cloud.tencent.com/developer/article/1466390)
+
+[敏捷开发](https://juejin.im/post/6844904039822409735)
+
+[kakaJson源码](https://github.com/FCF5646448/KakaJSON)
+
+[高效使用单元测试](https://xiaozhuanlan.com/topic/3790216845)
+
+[写好一个单例](https://juejin.im/post/6844903818216341517#heading-3)
+
+[后台任务崩溃](https://www.jianshu.com/p/1fc5a2c676c6)
+
+[深入理解swift派发机制](https://kemchenj.github.io/2016-12-25-1/)
+
+[iOS性能优化](https://zhuanlan.zhihu.com/p/110545595)
+
+[iOS性能优化2](https://zhuanlan.zhihu.com/p/181404556)
 
