--- a/读书笔记/iOS自学笔记/知识小集00-OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00-OC基础.md
@@ -580,19 +580,17 @@ NSLog(@"number = %@", number); //这里是可以打印出来的
 
 ### 锁与多线程
 #### 进程与线程
-https://juejin.im/post/6844903801321685000
-
 * 进程：(线程+内存+文件/网络句柄)
-  指系统中正在运行的一个应用程序，是系统进行**资源分配和调度的基本单位**。每个进程都有自己独立的虚拟地址空间，每个进程只能访问自己的实际物理地址空间。这样就将进程之间的物理地址访问隔离开来了。真正的内存使用过程中，每切换一个进程后，虚拟地址空间都得完全映射到物理地址中，如果内存不足，则会先将正在使用内存的其他程序移出以空出内存供当前程序使用。这也是为什么APP容易被后台强杀的原因。
+  指在系统中**正在运行**的一个应用程序，是系统进行**资源分配和调度的基本单位**。每个进程都有自己独立的内存空间，每个进程的内存是相互独立的。这里的内存是逻辑内存，指的是虚拟地址空间（虚拟地址空间通过某种映射方法转换成实际的物理地址。所以只要妥善控制映射过程，就能够让单个进程所能访问到的物理地址空间不会跟另一个程序相重叠，达到地址空间隔离的效果。其次在真正的内存使用过程中，每切换一个进程后，虚拟地址空间都得完全映射到物理地址中，如果内存不足，则会先将正在使用内存的其他程序移出以空出内存供当前程序使用。这也是为什么APP容易被后台强杀的原因）
 
 * 线程
-  是指进程中一个单一顺序的控制流，是程序执行的最小单位。一个进程可以并发多个线程，每条线程并行执行不同任务，**各个线程之间共享进程的内存空间**，所以线程太多也不一定是好事，因为首先同一个进程中的所有线程都共享进程的内存空间，多开辟子线程也就意味着消耗更多的内存；其次线程之间的上下文切换也会开销很大。
+  是指进程中一个单一顺序的控制流，是程序执行的最小单位。进程可看做事线程的容器，一个进程可以并发多个线程，每条线程单独执行不同任务，**各个线程之间共享进程的内存空间（包括代码段、数据段、堆等）**，所以线程也不是越多越好，开辟子线程也就意味着消耗更多的内存；其次线程之间的上下文切换也会开销很大。
 
-  线程可以访问进程内存中的所有数据。但是线程拥有自己的私有存储空间
+  线程主要包括：
 
-  - 栈：(比如局部变量)
-  - 线程局部存储TLS：(是指操作系统为线程单独提供的私有空间，比如iOS的ARC中Autorelease对象作为返回值时有使用TLS作为临时缓存)
-  - 寄存器：(比如函数参数)
+  - 栈：是指函数的调用栈，从main函数开始，会不断地进行函数调用，每调用一个函数，会把所有参数和返回地址作为一个单元压入栈中；
+  - PC计数器：它是用来指向内存中的当前指令的指针。
+  - 线程局部存储TLS：是线程所独有的内存空间，可以用来存储线程所独有的数据。(比如iOS的ARC中Autorelease对象作为返回值时有使用TLS作为临时缓存)。
 
 - 线程调度
   当线程数小于等于处理器数量时，是真正的并发，不同的线程运行在不同的处理器上，彼此不相干。但是当线程数量大于处理器数量时，则至少有一个处理器会运行多个线程。
@@ -612,7 +610,12 @@ https://juejin.im/post/6844903801321685000
 	* 根据进入等待状态的频繁程度提升或降低优先级；
 	* 长时间得不到执行而被提升优先级；
 
-https://juejin.im/post/6844903801321685000
+#### 进程之间的交互 
+通过TCP/IP端口来实现
+#### 线程之间的交互
+
+
+
 多线程是为了实现并发执行的技术。在单核CPU中，操作系统通过分配CPU计算时间来实现软件层面的多线程，在多核CPU中，则直接可以在硬件层面进行多线程运行。
 iOS有多种多线程的方案，pthread、NSThread、performSelect、GCD、NSOperation。
 
