进程通讯学习

--- a/读书笔记/iOS自学笔记/知识小集00-OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00-OC基础.md
@@ -612,7 +612,14 @@ NSLog(@"number = %@", number); //这里是可以打印出来的
 
 #### 进程之间的交互 
 通过TCP/IP端口来实现
+
+https://www.jianshu.com/p/534a4a664abd
+
+https://www.zybuluo.com/qidiandasheng/note/1681645
+
 #### 线程之间的交互
+
+https://juejin.im/post/6844904152082939917
 
 
 
@@ -1007,6 +1014,9 @@ NSOperation可以添加依赖、优先级、最大并发量，操作可以控制
 GCD则有栅栏、group、信号量、单例、延时执行等。在暂停、取消、最大并发量这些操作更不容易实现。
 
 #### 锁
+
+https://juejin.im/post/6844904167010467854
+
 锁主要可以分为三大类：**信号量**、**互斥锁**、**自旋锁**：
 * 信号量查看GCD相关知识点；
 * phread_mutex是互斥锁，互斥锁在访问被锁的资源时，调用者线程会休眠，此时CPU可以调度其他线程工作，直到被锁资源释放，此时线程才会被唤醒。
@@ -1595,3 +1605,4 @@ https://juejin.im/post/5abca877f265da238155b6bc
 
 [iOS性能优化2](https://zhuanlan.zhihu.com/p/181404556)
 
+[iOS锁详解](https://juejin.im/post/6844904167010467854)
