完善RunLoop的commonmode的知识点

--- a/读书笔记/iOS自学笔记/知识小集00-OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00-OC基础.md
@@ -260,11 +260,21 @@ CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个co
 
 * 注意：
   * CFRunLoop和NSRunLoop的区别就是：CFRunLoop是纯C的API，是线程安全的，NSRunLoop不是线程安全的。 所以如果在一个线程中操作另一个线程的runloop可能会产生意想不到的后果。所以可以使用getCGRunLoop获取对应的CFRunLoopRef类，来达到线程安全的目的。
+
   * RunLoop与线程是一一对应的关系。所有的runloop被存在一个全局的字典容器中。我们无法手动代码创建runloop，只能通过currentRunLoop获取当前的runloop，获取的过程中，以线程为key值进行查找，没有找到就会默认创建，所以子线程中，不手动调用[[NSRunloop current] run]，则该线程中的runloop就不会自动开启。 
 
   * 五种mode的区别：DefaultMode是APP默认的mode，通常主线程是在这个mode下运行；TrackingMode是UIScrollView的滑动mode；UIInitializationMode是app启动时的mode，启动完成后就不再使用；EventReceiveMode系统内部接收事件的mode，通常用不到；CommonMode则实际上不是一种模式，而是一种mode的组合方式。一个RunLoop包含多个Mode、每个Mode又包含多个Timer、Observer、Source；
 
-  * commonMode是一种技术解决方案。RunLoop启动时只能指定一个Mode作为当前的currentMode，如果要切换Mode，只能先退出当前Mode，重新选择一个Mode进入。所以为了解决一个RunLoop只能有一个Mode的情况，产生CommonMode的技术解决方案。默认情况下 Common Modes 包含 default modes，event Tracking modes， 也可使用 CFRunLoopAddCommonMode 方法向 Common Modes中添加自定义 modes。一个mode一旦被标记为common属性的话，则该mode的名字就会被放到commonMode集合中，当runloop的mode发送变化时，runloop会将commonModeItems中的Observer、timer、source同步到具有Common属性的mode中。这样就可以让一些事件可以同时在多个mode中工作，比如NSTimer。
+  * commonMode是一种技术解决方案。RunLoop启动时只能指定一个Mode作为当前的currentMode，如果要切换Mode，只能先退出当前Mode，重新选择一个Mode进入。而commonMode是一种伪模式，它是指标记了Common属性的Mode，默认被标记了Common属性的Mode只有DefaultMode，TrackingMode。也可以使用CFRunLoopAddCommonMode 方法向 Common Modes中添加自定义 modes。
+
+    ```
+    [runLoop addTimer:timer forMode:NSDefaultRunLoopMode];
+    [runLoop addTimer:timer forMode:UITrackingRunLoopMode];
+    //下面一行和上面两行的效果是一样的
+    [runLoop addTimer:timer3 forMode:NSRunLoopCommonModes];
+    ```
+
+    CommonMode就是为了解决一个RunLoop只能有一个Mode而产生的技术解决方案。而一个mode一旦被标记为common属性的话，则该mode的名字字符串就会被放到commonModes集合中，当runloop的mode发送变化时，runloop会将commonModeItems中的Observer、timer、source同步到具有Common属性的mode中，这样就可以让一些事件可以同时在多个mode中工作。比如NSTimer，当其被添加进commonMode中时，它就可以在标记了common属性的DefaultMode和TrackingMode中同时运行。
 
   * 4种Mode Item：Observer、timer、source0、source1：Oberver主要是用来观察RunLoop自身的6大状态，Timer实际就是我们用的NSTimer，也就是说NSTimer是根据RunLoop的Timer事件实现的，所以它是不准的。source0用于接收用户事件，比如UIEvent。source1事件是系统内核使用的，它可以主动唤起线程。
 
