--- a/读书笔记/iOS自学笔记/知识小集00-OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00-OC基础.md
@@ -1616,3 +1616,6 @@ https://juejin.im/post/5abca877f265da238155b6bc
 [iOS性能优化2](https://zhuanlan.zhihu.com/p/181404556)
 
 [iOS锁详解](https://juejin.im/post/6844904167010467854)
+
+[iOS即时通讯](https://www.jianshu.com/p/2dbb360886a8)
+
