优化各专题学习笔记

--- a/读书笔记/iOS自学笔记/专题——网络框架.md
+++ b/读书笔记/iOS自学笔记/专题——网络框架.md
@@ -329,3 +329,22 @@ AF.request(_ convertible: URLConvertible,
 4、<https://blog.csdn.net/zgpeace/article/details/103069788>
 
 5、<https://rayy.top/2019/12/09/alamofire/>
+
+
+
+#### 自己动手写一个网络请求库
+
+[自己动手写一个iOS网络请求库]<https://lvwenhan.com/ios/454.html> 
+
+
+
+#### AFNetworking
+
+整体框架：AFNetWorking整体框架主要是由会话模块(NSURLSession)、网络监听模块、网络安全模块、请求序列化和响应序列化的封装以及UIKit的集成模块(比如原生分类)。
+其中最核心类是AFURLSessionManager，其子类AFHTTPSessionManager包含了AFURLRequestionSerialzation(请求序列化)、AFURLResponseSerialzation(响应序列化)两部分；同时AFURLSessionManager还包含了NSURLSession(会话模块)、AFsecurityPolicy(网络安全模块：证书校验)、AFNetWorkingReachabilityManager(负责对网络连接进行监听)；
+AFURLSessionManager主要工作包括哪些？
+1、负责管理和创建NSURLSession、NSURLSessionTask
+2、实现NSURLSessionDelegate等协议的代理方法
+3、引入AFSecurityPolicy保证请求安全
+4、引入AFNetWorkingReachabilityManager监听网络状态
+https://www.jianshu.com/p/b3c209f6a709
