iOS 加密签名学习

--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -148,7 +148,7 @@ category是在运行时方法objc_init添加进类当中的，根据运行时方
 * 读写属性：readwrite: 默认，可读可写；readOnly: 只读；
 * 原子属性：atomic: 原子性; nonatomic: 非原子性。atomic并不能完全包证线程安全，atomic能够保证读写方法的原子性，比如：如果是一个可变数组的话，只能保证数组的读写方法的原子性，但是对数组里元素的操作是没法保证原子性的。一般我们保证可变数组的线程安全的最直接方式是使用信号锁，如果要实现多读单写则要使用dispatch_barrier_async。
 * assign & weak：assign可以修饰基础数据类型和对象类型，但是修饰的对象类型，在对象释放后不会自动置为nil，容易导致垂悬指针错误；weak只能用于修饰对象类型，weak指针指向的对象释放后，会在dealloc内部对weak指针置为nil操作。所以一般使用是用weak修饰对象类型，用assign修饰基础数据类型。其次他们修饰对象类型的话也都不会增加所指对象的引用计数。
-* copy：copy一般用于修饰不可变集合类型和block；
+* copy：copy一般用于修饰不可变集合类型和block；通常的一个面试题是：为什么使用copy修饰NSString而不是strong。原因就是使用strong的话，如果用一个NSMutableString的类型b给NSString类型a赋值，那么a最终也就变成了NSMutableString类型。对b的修改也会导致a的变化，这样就违背了a是不可变类型的初衷，出现安全性问题。而使用copy，底层是深拷贝，会拷贝一份新的内存，两者的修改不会相互影响。
 * 浅拷贝 & 深拷贝：浅拷贝是指拷贝一个指针，与被拷贝对象是同一个内存区域，也就是会增加被拷贝对象的引用计数；深拷贝是将内存区域重新生成一份，然后用指针指向它，不会增加被拷贝对象的引用计数。(如何记忆？原则上，对拷贝完成之后的对象进行操作，不会影响原有对象则为深拷贝，否则为浅拷贝。比如，对不可变对象进行copy，结果是不可变对象，也就是拷贝前后的对象其实是可以使用同一块内存区域的；对可变对象进行copy，结果是不可变对象，那对拷贝之后的对象进行操作要不影响原有对象，只能拷贝另一份内存区域，所以是深拷贝；同样的，无论对可变还是不可变对象进行mutableCopy，最好都生成可变对象，对拷贝之后的对象进行操作，想要不影响原有对象，则必须拷贝另一份内存区域，所以是深拷贝)
 
 #### 关键名词解析
