--- a/读书笔记/面试题精选/面练——各理论常考题.md
+++ b/读书笔记/面试题精选/面练——各理论常考题.md
@@ -11,4 +11,5 @@ description:  总结了iOS底层理论知识点所对应的面试题
 * Category的实现原理，为什么Category只能添加方法不能添加属性？
 * Category中有load方法吗？load方法什么时候调用？load方法能继承吗？
 * load、initialize在Category中的调用顺序，出现继承时，他们之间的调用过程
-* load、initialize的区别，已经它们在Category重写时的调用次序？
+* load、initialize的区别，以及它们在Category重写时的调用次序？
+
