--- a/读书笔记/面试题精选/面练——各理论常考题.md
+++ b/读书笔记/面试题精选/面练——各理论常考题.md
@@ -13,3 +13,32 @@ description:  总结了iOS底层理论知识点所对应的面试题
 * load、initialize在Category中的调用顺序，出现继承时，他们之间的调用过程
 * load、initialize的区别，以及它们在Category重写时的调用次序？
 
+#### OC对象
+* 一个OC对象在内存中是如何布局的？
+  一个NSObject被编译后是一个Objc_object的结构体，它里面只有一个isa指针，一个指针在64位系统下，占用8个字节。
+
+* 一个NSObject对象占用多少内存？
+  系统分配了16个 字节给NSObject对象。(一个对象最少占用16字节空间。另外从内存对齐的角度来开，内存对齐的方式：结构体大学必须是最大成员大小的倍数)
+  但是NSObject对象内部只使用了8个字节的空间(在64位系统下)。
+
+* 下面的Person对象和Student对象分别占用多少内存空间？
+  ```
+  @interface Person: NSObject 
+  {
+        int _age;
+  }
+  @end
+  @interface Student: Person 
+  {
+        int _no;
+  }
+  @end	
+  ```
+  Person和Student对象都是占用了16个字节。
+
+* isa指针指向哪里？
+
+  
+
+* OC的类信息存放在哪里？
+
