--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -105,6 +105,7 @@ KVO是OC观察者模式的实践之一，使用了里式替换的设计原则。
 ```
 注意：
 * kvo触发的关键点在于重写了属性的Setter方法，然后写了willChangeValueForKey和didChangeValueForKey方法，所以**直接给成员变量 _ B赋值是不会触发KVO的**，但是直接手动调用这两个方法也是可以触发KVO的；
+* kvo重写了父类的setter方法、class方法、dealloc方法、isKVOA方法；
 * KVC的setValue:ForKey:也能触发KVO，这也是KVC和KVO直接的联系；
 
 #### KVC
