--- a/读书笔记/面试题精选/面练——各理论常考题.md
+++ b/读书笔记/面试题精选/面练——各理论常考题.md
@@ -116,3 +116,28 @@ description:  总结了iOS底层理论知识点所对应的面试题
 
 ### KVC 
 
+* 通过KVC修改属性会触发KVO吗？
+
+  可以触发。下述setValue的每一个方式都会触发KVO
+
+* KVC的赋值和取值过程是怎样的？原理是什么？
+
+  **赋值**：setValue:forKey:的过程：
+
+  先查找是否存在方法setKey: 有则直接使用；
+
+  没有，则再查找是否存在方法 _setKey: 有则直接使用；
+
+  没有，则判断accessInstanceVariablesDirectly是否为YES，表示是否允许直接访问成员变量；
+
+  值为YES，则判断是否存在成员变量_key，有则直接赋值；
+
+  没有，则判断是否存在成员变量_isKey，有则直接赋值；
+
+  没有，则判断是否存在成员变量key，有则直接赋值；
+
+  没有，则判断是否存在成员变量isKey，有则直接赋值；
+
+  没有，则崩溃。
+
+  **取值**：valueForKey:的过程：
