--- a/读书笔记/面试题精选/面练——各理论常考题.md
+++ b/读书笔记/面试题精选/面练——各理论常考题.md
@@ -16,6 +16,29 @@ description:  总结了iOS底层理论知识点所对应的面试题
   但是NSObject对象内部只使用了8个字节的空间(在64位系统下)。
 
 * 下面的Person对象和Student对象分别占用多少内存空间？
+
+  内存分配，iOS中内存分配都是以16的倍数来分配的，为了提高访问速度。
+  一个指针8个字节，一个int4个字节，一个double8个字节。最终分配的内存，都是**按16的倍数**来分配的。
+  ```
+  @interface Person : NSObject
+  {
+      int _age;
+      int _no;
+  }
+  @end
+  
+  Person *p = [Person new]; 
+  ```
+  编译成结构体后
+  ```
+  struct Person_IMPL{
+      Class isa;	//指针8字节
+      int _age;	//整形4字节
+      int _no;	//整形4字节
+  };
+  p对象占16字节
+  ```
+Person和Student对象各占多少空间？
   ```
   @interface Person: NSObject 
   {
