--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -512,14 +512,63 @@ void (^block1) = ^{val=1;}; //注意，在MRC下，block1是一个栈block，因
 
 问题：为什么会出现_ _ block？
 
-block对于不同的数据类型，有不同的截获方式。全局变量、静态局部变量都是存储在数据区，所以在block内对其进行修改，也可以成功；auto对象类型，是连同所有权修饰符一起截获，说白了其实就是改变了引用计数而已，最终也是通过block内部的指针找对对应的对象，进行修改，也可以成功。那如果我要对auto基础数据类型进行修改，那是否能够实现？答案是不能。
+block对于不同的数据类型，有不同的截获方式。全局变量、静态局部变量都是存储在数据区，所以在block内对其进行修改，也可以成功；**对auto变量进行修改，那是否能够实现？答案是不能**(我们如果在block里对auto类型变量进行**修改**，会直接报错)。其次我猜测是因为block里修改auto变量实际上就会触发到内存相关问题，首先对于auto基础数据类型，因为是值传递进来的，所以修改了block里面的值，就没法同步到block外面，所以编译器不允许；对于auto对象类型，在block里修改了对象（其实就是重新赋值），那就是在堆上开辟了一块新的内存空间的问题，所以两个对象无关如关联的话，那其实也是在block内外无法同步的，所以编译器同样不会允许。
 所以这就出现了 _ _ block。
 什么是 _ _ block? 
-**_ _ block其实是一个存储区域说明符，它可以指定变量值存储到哪个区域中**。所以_ _ block可以解决block内部无法修改auto基础数据类型的问题。但是注意：_ _ block不能修饰全局变量、静态变量（因为这两个变量存储在数据区，数据区里的东西，编译完成后就不能轻易动）。
+**_ _ block其实是一个存储区域说明符，它可以指定变量值存储到哪个区域中**。所以_ _ block可以解决block内部无法修改auto数据类型的问题。但是注意：_ _ block不能修饰全局变量、静态变量（因为这两个变量存储在数据区，数据区里的东西，编译完成后就不能轻易动）。
 
-具体实现：
-添加了 _ _ block修饰符的变量最终会被封装成一个结构体：
-结构体中包含一个与变量同名的成员变量及其值；结构体中还包含一个 **_ _ forwarding指针，初始化指向自身地址**；结构体中含有isa指针。也就是说使用了 _ _ block修饰的变量最终变成了对象。
+具体代码实现：
+
+```
+/*
+下面的age变量最终编译成了一个结构体：
+struct __Block_byref_age_0 {
+	void *__isa;
+	__Block_byref_age_0 *__forwarding; //可以发现这个指针类型是它本身
+	int __flags;
+	int __size;
+	int age; //这里肯定就是存储age传进来的值
+};
+下面FCFPerson对象也被编译成了一个结构体：
+struct __Block_byref_p_1 {
+	void *__isa;
+	__Block_byref_p_1 *__forwarding;
+	int __flags;
+	int __size;
+	void (*__Block_byref_id_object_copy)(void*, void*);
+	void (*__Block_byref_id_object_dispose)(void*);
+	FCFPerson *p;
+};
+可以发现这个auto对象类型只是多了两个内存管理的方法：copy和disponse。
+下面一行最终编译成：
+__Block_byref_age_0 age = {
+                    0,
+                    &age,	//可以发现__forwarding存储的是age变量本身的地址，也就是__Block_byref_age_0结构体本身的地址。
+                    0,
+                    sizeof(__Block_byref_age_0),
+                    10
+};
+*/
+__block int age = 10;
+void (^block)(void) = ^{
+	//这一句被被编译成：(age->__forwarding->age) = 20; 第一个age是结构体指针。
+    age = 20;
+};
+block();
+// 这里编译成了age->__forwarding->age = 30；也就是说添加了_ _block之后，对age变量的所有修改，都是先通过结构体指针拿到__forwarding指针，然后获取到结构体内部的同名变量age，然后进行修改。
+age = 30;
+```
+
+可以发现添加了 _ _ block修饰符的变量最终会被封装成一个结构体。结构体中包含一个isa指针与变量同名的成员变量，还包含一个 **_ _ forwarding指针，初始化指向结构体自身地址**。也就是说使用了 _ _ block修饰的变量最终变成了结构体对象。然后在block中对auto变量进行修改时，实际的使用方式是通过结构体指针获取到_ _ forwarding指针，然后获取到结构体内部的同名变量，最终进行赋值。
+
+当auto变量变成结构体对象后，那么就肯定就出现内存管理的问题。__block 修饰的对象的内存是怎么管理的呢？
+
+首先我们知道block对auto对象类型的变量的截获方式是**连通其所有权修饰符一起截获**，然后根据其修饰符来确定是强引用和弱引用。那其实这里也是一样的，使用_ _block修饰了的变量，最终变成了一个对象。那么block对这个对象也是连同其所有权修饰符一起截获， **block修饰其实就是强引用**。
+
+不过这里的截获方式，也只是说block内部对auto变量的使用方式，可能会影响其引用计数。而auto变量变成了对象，也只是解决了对象可以在block内部进行修改的问题。但是auto变量始终是局部变量，它迟早会被释放掉，那如何既可以在block内部使用，也可以使得修改同步到任何一个引用了该变量的block里面呢？
+
+答案就是将 _ _ block修饰的变量也一并被拷贝到堆上。也就是说在block被copy到堆上的同时，_ _ block修饰的变量也会一同不被拷贝到堆上。当block被dispose的时候，_ _block修饰的变量也会被执行release操作。
+
 但是实际上这并未从根本上改变block内部不能修改auto变量的问题。因为即使变成了对象，那也依旧是局部变量。只是，在block被拷贝到堆上时，_ _ block变量也会一并被拷贝到堆上，然后结构体中的 _ _ forwarding指针就会指向堆上的 _ _ block结构体的地址。实际访问过程中，就都是通过 _ _ forwarding指针找到最终的结构体(未进行拷贝的栈上的结构体的forwarding指针指向自身，发生拷贝后，栈上的forwarding指针指向堆区的结构体，堆区的forwarding指针指向自身)，然后访问最终的同一个变量。这样就解决了栈上变量作用域问题。
 
 那如果有多个block访问同一个 _ _ block变量，那么效果也是一样的，只是_ _ block变量的引用计数会增加。
