--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -537,7 +537,7 @@ struct __Block_byref_p_1 {
 	int __size;
 	void (*__Block_byref_id_object_copy)(void*, void*);
 	void (*__Block_byref_id_object_dispose)(void*);
-	FCFPerson *p;
+	FCFPerson *p; //注意这个指针会根据MRC、ARC以及ARC下的引用计数修饰符来确定是强引用还是弱引用。
 };
 可以发现这个auto对象类型只是多了两个内存管理的方法：copy和disponse。
 下面一行最终编译成：
@@ -550,9 +550,12 @@ __Block_byref_age_0 age = {
 };
 */
 __block int age = 10;
+__block FCFPerson * p = [FCFPerson new];
 void (^block)(void) = ^{
 	//这一句被被编译成：(age->__forwarding->age) = 20; 第一个age是结构体指针。
     age = 20;
+    //下面一行被编译成：p = {0,&p, 33554432, sizeof(__Block_byref_p_1), __Block_byref_id_object_copy_131, __Block_byref_id_object_dispose_131, ((objc_msgSend)(objc_getClass("FCFPerson"), sel_registerName("new"))};
+	p = [FCFPerson new]; 
 };
 block();
 // 这里编译成了age->__forwarding->age = 30；也就是说添加了_ _block之后，对age变量的所有修改，都是先通过结构体指针拿到__forwarding指针，然后获取到结构体内部的同名变量age，然后进行修改。
@@ -561,21 +564,37 @@ age = 30;
 
 可以发现添加了 _ _ block修饰符的变量最终会被封装成一个结构体。结构体中包含一个isa指针与变量同名的成员变量，还包含一个 **_ _ forwarding指针，初始化指向结构体自身地址**。也就是说使用了 _ _ block修饰的变量最终变成了结构体对象。然后在block中对auto变量进行修改时，实际的使用方式是通过结构体指针获取到_ _ forwarding指针，然后获取到结构体内部的同名变量，最终进行赋值。
 
-当auto变量变成结构体对象后，那么就肯定就出现内存管理的问题。__block 修饰的对象的内存是怎么管理的呢？
+当auto变量变成结构体对象后，那么就肯定需要处理内存管理的问题。__block 修饰的对象的内存是怎么管理的呢？ 
 
-首先我们知道block对auto对象类型的变量的截获方式是**连通其所有权修饰符一起截获**，然后根据其修饰符来确定是强引用和弱引用。那其实这里也是一样的，使用_ _block修饰了的变量，最终变成了一个对象。那么block对这个对象也是连同其所有权修饰符一起截获， **block修饰其实就是强引用**。
+*  _ _ block修饰的auto基础数据类型。 当block在栈上时，不会产生强引用（因为没有必要）。当block拷贝到堆上时， _ _ block结构体也会被拷贝到堆上，_ _ block结构体也会被拷贝到堆上，然后内部生成的结构体对象会通过copy函数来处理。因为其变成了对象，所以和auto对象类型一样的方式进行**连同其所有权修饰符一起截获**，又因为__block是强引用修饰，所以添加了 _ _ block修饰的auto基础数据类型最终是一个强引用的过程；当block从堆上移除的时候，则会通过dispose函数来释放它们（执行release）。
+* _ _ block修饰的auto对象类型。其内部也是会生成一个新的结构体，然后内部有一个同名的对象指针。当block在栈上时，也不会产生强引用（因为没有必要）。当block拷贝到堆上时， _ _ block结构体也会被拷贝到堆上，然后内部生成的结构体对象会通过copy函数来处理。**如果是在MRC的情况下，内部结构体里的对象指针永远是弱引用；在ARC下，则会根据外部对象本身的所有权修饰符来确定是强引用还是弱引用**，多个block同时使用该变量的话，也只是引用计数上的变化。当block从堆上移除的时候，则会通过dispose函数来释放它们（执行release）。
 
-不过这里的截获方式，也只是说block内部对auto变量的使用方式，可能会影响其引用计数。而auto变量变成了对象，也只是解决了对象可以在block内部进行修改的问题。但是auto变量始终是局部变量，它迟早会被释放掉，那如何既可以在block内部使用，也可以使得修改同步到任何一个引用了该变量的block里面呢？
+**_ _ forwarding指针**
 
-答案就是将 _ _ block修饰的变量也一并被拷贝到堆上。也就是说在block被copy到堆上的同时，_ _ block修饰的变量也会一同不被拷贝到堆上。当block被dispose的时候，_ _block修饰的变量也会被执行release操作。
+栈上的_ _ forwarding指针指向自身结构体地址，当 _ _ block变量被拷贝到堆上时，原来栈上的_ _ forwarding指针会指向其拷贝到堆上的结构体地址，堆上的_ _ forwarding指针依旧指向堆上自身结构体地址。这样就确保了无论什么时候、在哪里修改该 _ _block变量，最终都是修改的堆上的变量。
 
-但是实际上这并未从根本上改变block内部不能修改auto变量的问题。因为即使变成了对象，那也依旧是局部变量。只是，在block被拷贝到堆上时，_ _ block变量也会一并被拷贝到堆上，然后结构体中的 _ _ forwarding指针就会指向堆上的 _ _ block结构体的地址。实际访问过程中，就都是通过 _ _ forwarding指针找到最终的结构体(未进行拷贝的栈上的结构体的forwarding指针指向自身，发生拷贝后，栈上的forwarding指针指向堆区的结构体，堆区的forwarding指针指向自身)，然后访问最终的同一个变量。这样就解决了栈上变量作用域问题。
 
-那如果有多个block访问同一个 _ _ block变量，那么效果也是一样的，只是_ _ block变量的引用计数会增加。
 
 #### block循环引用：
+* 使用_ _ weak、_ _ unsafe_unretained解决：
+```
+	FCFPerson * p = [FCFPerson new];
+	p.block = ^{
+		NSLog(@"-----------%@",p.name);
+	};
+```
+解决方式：
+```
+	FCFPerson * p = [FCFPerson new];
+	__weak typeof(p) weakp = p; //或者使用__unsafe_unretained , 只是__unsafe_unretained不安全，指针不会回收，会产生野指针错误。
+	p.block = ^{
+		__strong typeof(weakp) strongp = p; //为了确保执行过程中p不为nil
+		NSLog(@"-----------%@",strongp.name);
+	};
+```
+
 * _ _ block变量导致的循环引用：
-  但是在**ARC和MRC下是有区别**的。**在MRC下使用 _ _ block修饰的变量，不会增加对象的引用计数；在ARC下，使用 _ _ block修饰的变量，会增加其引用计数**，这样就导致block持有了_ _ block变量，结构体持有了_ _ block变量，block还持有了结构体，导致了循环引用。所以就有一道痕经典的面试题:
+  但是在**ARC和MRC下是有区别**的。**在MRC下使用 _ _ block修饰的变量是弱引用，不会增加对象的引用计数；在ARC下，使用 _ _ block修饰的变量，会增加其引用计数**，这样就导致block持有了_ _ block变量，结构体持有了_ _ block变量，block还持有了结构体，导致了循环引用。所以就有一道痕经典的面试题:
 
   ```
   {
@@ -596,12 +615,11 @@ age = 30;
     _block(3);
   }
   ```
-
-一般我们对block的截获的局部变量进行**赋值**操作时，需要先对其进行__block。
-
+但是这样有个确定，就是必须执行block，否则永远存在循环引用。
 
 * 截获_ _ strong类型的变量导致的循环引用：
-由于block对局部对象类型的截获变量特性，所以就导致了可能存在的循环引用问题。如果对象类型是 _ _ strong类型的，那么block对其进行截获是会连同所有权修饰符一起截获，也就是说在block内部也是使用了一个 _ _ strong类型的变量强引用了它。所以这就导致了循环引用的问题。所以最好的解决方案就是对截获的变量使用  _ _ weak 的变量去替代它，其次常用的解决循环引用的方法就是断环。
+由于block对局部auto对象类型的截获变量特性，所以就导致了可能存在的循环引用问题。如果对象类型是 _ _ strong类型的，那么block对其进行截获是会连同所有权修饰符一起截获，也就是说在block内部也是使用了一个 _ _ strong类型的变量强引用了它。所以这就导致了循环引用的问题。所以最好的解决方案就是对截获的变量使用  _ _ weak 的变量去替代它，其次常用的解决循环引用的方法就是断环。
+
 * 处理NSTimer导致的循环引用问题：
 例如：当前类强引用了timer，timer又强引用了target。所以一般我们都考虑在当前类释放的时候， [ _ timer invalidate]; _ timer = nil; ，使用断环的方式处理循环引用。但是如果不太容易知晓在何处使用invalidate更好的情况下，怎么解除循环引用是一个难点。
 ```
