--- a/读书笔记/面试题精选/面练——各理论常考题.md
+++ b/读书笔记/面试题精选/面练——各理论常考题.md
@@ -192,7 +192,22 @@ Person和Student对象各占多少空间？
 
 ### Block
 * block的原理是什么？本质是什么？
+
+  block是oc对象，block调用就是函数调用。
+
 * _block的作用是什么？有什么使用注意点？
+
+  __block可以解决block内部无法修改外部auto类型的变量。
+
+  需要注意的点就是使用了__block后的内存管理问题以及auto对象类型内存在mrc和arc下的差异。
+
 * block的属性修饰符为什么是copy？使用block有哪些注意事项？
+
+  通常我们使用block都需要掌握block的生命周期，也就是要让block存储在堆上。在MRC下，只有对block进行copy操作才能将栈block拷贝到堆上，在ARC下，进行copy、赋值给__strong类型变量、作为返回值、赋值给usingblock的参数、赋值给GCD的API，都可以触发将栈block拷贝到堆上。所以为了是ARC和MRC下都能够达到这个效果，所以使用Copy关键字。
+
+  使用需要注意循环引用的问题。 
+
 * block在修改NSMutableArray时，需不需要添加_block?
+
+  修改数组内部的元素是不需要添加，如果是对array进行重新赋值，则需要。
 
