优化部分细节

--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -379,6 +379,7 @@ Block是对函数及其执行上下文封装起来的对象。
 #### block基础数据结构：
 Block最终被编译之后得到的是一个结构体，结构体内部成员变量有一个 __block_impl的结构体，它内部包含一个isa指针，一个FunPtr函数指针。所以说block是一个对象，block调用就是函数调用。
 可以通过打印block的superclass来查看block的类型，最终会得到NSObject。
+
 ```
 void test1() {
     //说明block是一个对象
@@ -470,7 +471,7 @@ Block使用到的变量包括：
 
 局部变量截获问题总结一下：
   * 对于局部auto基础数据类型编译后是**值传递**。所以即使是block里修改成功了自动变量，也无法改变外部的值；
-  * 对于局部auto对象类型则是采用**连同其所有权修饰符一起截获**。如果是栈block，则无论修饰符是什么，都不会产生强引用（因为栈block随时都会释放，即使进行了强引用，那么block释放的时候，引用计数也会里面减一，所以就没有必要强引用）；如果是堆block，则会根据其所有权修饰符来确实是弱引用还是强引用。如果是强引用的话，则就可以保证被截获的对象肯定是在block之后被销毁的，所以对象在block内外的变化，都可以被同步到。因为最终操作都是通过指针找到对应的对象进行操作。其次这也存在内存管理相关的东西，所以这也就可能导致循环引用的问题。（说白了其实就是根据修饰符来改变了引用计数而已，如果最终没有被释放（强引用）最终也是通过block内部的指针找对对应的对象，然后进行操作）。
+  * 对于局部auto对象类型则是采用**连同其所有权修饰符一起截获**。如果是栈block，则无论修饰符是什么，都不会产生强引用（因为栈block随时都会释放，即使进行了强引用，那么block释放的时候，引用计数也会里面减一，所以就没有必要强引用）；如果是堆block，则会根据其所有权修饰符来确定是弱引用还是强引用。如果是强引用的话，则就可以保证被截获的对象肯定是在block之后被销毁的，所以对象在block内外的变化，都可以被同步到。因为最终操作都是通过指针找到对应的对象进行操作。其次这也存在内存管理相关的东西，所以这也就可能导致循环引用的问题。（说白了其实就是根据修饰符来改变了引用计数而已，如果最终没有被释放（强引用）最终也是通过block内部的指针找对对应的对象，然后进行操作）。
   * 对于静态局部变量，则直接通过**指针传递**，因为静态变量一直存在内存中，所以只需要得到地址就能够访问到之前的内容。
 
 #### block的类型：
@@ -506,13 +507,13 @@ void (^block1) = ^{val=1;}; //注意，在MRC下，block1是一个栈block，因
 ```
 所以 在MRC中，block属性只能使用copy关键字，在ARC中，block属性可以使用Strong关键字和copy关键字。在实际开发过程中，为了使代码在ARC和MRC中都能使用，所以我们一般推荐使用copy关键字。
 
-通过上面的分析，我们知道对全局block进行copy不会有任务反应，对栈block进行copy则会被拷贝到堆上，对堆block进行copy操作则会增加其引用计数（所以是个浅拷贝）。//（ 那实际上，对栈block进行copy操作时，在堆上也产生了一个一样的block。同时，在MRC下，对栈block进行copy操作就如同执行了一个malloc方法，所以同样存在内存泄漏的问题。这一段有待商榷，单纯的copy貌似不会产生 _ _ forwarding指针）。
+通过上面的分析，我们知道对全局block进行copy不会有任务反应，对栈block进行copy则会被拷贝到堆上，对堆block进行copy操作则会增加其引用计数（所以是个浅拷贝）。
 
 #### --block：
 
 问题：为什么会出现_ _ block？
 
-block对于不同的数据类型，有不同的截获方式。全局变量、静态局部变量都是存储在数据区，所以在block内对其进行修改，也可以成功；**对auto变量进行修改，那是否能够实现？答案是不能**(我们如果在block里对auto类型变量进行**修改**，会直接报错)。其次我猜测是因为block里修改auto变量实际上就会触发到内存相关问题，首先对于auto基础数据类型，因为是值传递进来的，所以修改了block里面的值，就没法同步到block外面，所以编译器不允许；对于auto对象类型，在block里修改了对象（其实就是重新赋值），那就是在堆上开辟了一块新的内存空间的问题，所以两个对象无关如关联的话，那其实也是在block内外无法同步的，所以编译器同样不会允许。
+block对于不同的数据类型，有不同的截获方式。全局变量、静态局部变量都是存储在数据区，所以在block内对其进行修改，也可以成功；**对auto变量进行修改，那是否能够实现？答案是不能**(我们如果在block里对auto类型变量进行**修改**，编辑器会直接报错)。其次我猜测是因为block里修改auto变量实际上就会触发到内存相关问题，首先对于auto基础数据类型，因为是值传递进来的，所以修改了block里面的值，就没法同步到block外面，所以编译器不允许；对于auto对象类型，在block里修改了对象（其实就是重新赋值），那就是在堆上开辟了一块新的内存空间的问题，所以两个对象无关联的话，那其实也是在block内外无法同步的，所以编译器同样不会允许。
 所以这就出现了 _ _ block。
 什么是 _ _ block? 
 **_ _ block其实是一个存储区域说明符，它可以指定变量值存储到哪个区域中**。所以_ _ block可以解决block内部无法修改auto数据类型的问题。但是注意：_ _ block不能修饰全局变量、静态变量（因为这两个变量存储在数据区，数据区里的东西，编译完成后就不能轻易动）。
