--- a/读书笔记/iOS自学笔记/专题——卡顿、崩溃.md
+++ b/读书笔记/iOS自学笔记/专题——卡顿、崩溃.md
@@ -951,3 +951,23 @@ static void LDAPMUncaughtExceptionHandler(NSException *exception) {
 
 [**Crash防护**](https://juejin.im/post/6874435201632583694#heading-33)
 
+
+
+
+
+[抖音头条如何实现OOM崩溃率下降50%](https://zhuanlan.zhihu.com/p/267294944)
+
+[知乎-性能分析与优化](https://zhuanlan.zhihu.com/p/35922784)
+
+[欧阳大哥-深入iOS底层之crash解决方法](https://juejin.im/post/6844903670404874254)
+
+[iphone crash report](https://developer.apple.com/documentation/xcode/diagnosing_issues_using_crash_reports_and_device_logs/analyzing_a_crash_report)
+
+
+
+
+
+
+
+
+
