--- a/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
+++ b/读书笔记/iOS自学笔记/知识小集00 - OC基础.md
@@ -874,7 +874,6 @@ SerialQueue.sync{
 dispatch_barrier是指栅栏调用，它的特点是无论是同步还是异步，都会阻塞当前线程，也就是说它会等待所有之前入队的任务都执行完成才开始执行，而在之后入队的所有任务会等待dispatch_barrier本身任务执行完成再执行。
 * dispatch_barrier_async与dispatch_barrier_sync的执行效果是一样的，区别就在于：**sync会阻塞后续任务入队，async不会阻塞入队**。但是执行时候的效果是一样的。例如，如果主线程中有打印，则sync会阻塞主线程中的打印，而async不会。
 ```
-
 ConcurentQueue.sync(flogs:.barrier){
 	print("~~~~barrier~~~")
 }
@@ -885,14 +884,13 @@ ConcurentQueue.async(flogs:.barrier){
 	print("~~~~barrier~~~")
 }
 print("主线程任务2")；//这句不一定是在barrier之后执行。
-
 ```
 
 
 * dispatch_barrier_async和dispatch_barrier_sync只有在自定义的并发队列中才能有栅栏效果，否则它与dispatch_async或dispatch_sync的作用是一样的，比如串行队列或者系统的全局队列都是无效的。所以它在串行队列中同样容易导致死锁。
 
 * dispatch_barrier实现多读单写
-​```swift
+```swift
 A{
     set{
         ConcurentQueue.async(flogs:.barrier){
@@ -905,8 +903,6 @@ A{
             return _a
         }
     }
-  
-
 }
 ```
 ##### dispatch_group调度组
@@ -1811,3 +1807,5 @@ https://juejin.im/post/5abca877f265da238155b6bc
 
 [iOS即时通讯](https://www.jianshu.com/p/2dbb360886a8)
 
+
+```
