--- a/读书笔记/面试题精选/面练——各理论常考题.md
+++ b/读书笔记/面试题精选/面练——各理论常考题.md
@@ -6,8 +6,7 @@ categories: 面试
 description:  总结了iOS底层理论知识点所对应的面试题
 ---
 
-### Runtime相关
-#### OC对象
+### OC对象
 * 一个OC对象在内存中是如何布局的？
   一个NSObject被编译后是一个Objc_object的结构体，它里面只有一个isa指针，一个指针在64位系统下，占用8个字节。
 
@@ -60,7 +59,7 @@ Person和Student对象各占多少空间？
 * OC的类信息存放在哪里？
 
 
-#### KVO 
+### KVO 
 * iOS用什么方式实现对一个对象的KVO？(KVO的本质是什么)
 
   KVO是根据里斯替换原则，在runtime时动态生成了一个NSKVONotifying_XXX的子类，然后利用Runtime的isa混写技术将当前类的isa指针指向动态生成的子类。然后会重写所监听属性的setter方法。
@@ -180,7 +179,7 @@ Person和Student对象各占多少空间？
 
   10、没有，则崩溃。
 
-#### Category
+### Category
 * Category的实现原理，为什么Category只能添加方法不能添加成员变量？
 * Category中有load方法吗？load方法什么时候调用？load方法能继承吗？
 * load、initialize在Category中的调用顺序，出现继承时，他们之间的调用过程
@@ -211,3 +210,11 @@ Person和Student对象各占多少空间？
 
   修改数组内部的元素是不需要添加，如果是对array进行重新赋值，则需要。
 
+### runtime
+
+* 讲一下OC的消息机制
+* 消息转发机制流程
+* 什么是Runtime？平时项目中有用过么？
+* super与self的关系
+* isKindOfClass和isMemberOfClass的区别？
+* 
